Criado opções de compartilhar app e de logout

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
       "locator": "cordova-plugin-googlemaps",
       "id": "cordova-plugin-facebook4"
     },
-    "cordova-plugin-crosswalk-webview"
+    "cordova-plugin-crosswalk-webview",
+    "cordova-plugin-x-socialsharing"
   ],
   "cordovaPlatforms": [
     {
